# api-problem-details

./: .gitignore  .releaserc.json  LICENSE  NOTICE  README.md  openapi-domain.yaml
.github/workflows/: ci.yaml  release.yaml
python/: .gitignore  README.md  pyproject.toml
python/src/jentic/: __init__.py
python/src/jentic/problem_details/: __init__.py  models.py  responses.py
python/tests/: test_models.py  test_responses.py  test_schema_conformance.py
responses/: 400-bad-request.yaml  401-unauthorized.yaml  403-forbidden.yaml  404-not-found.yaml  409-conflict.yaml  422-validation-error.yaml  429-too-many-requests.yaml  500-server-error.yaml  503-service-unavailable.yaml
schemas/: error-item.yaml  problem-details.yaml
typescript/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
typescript/src/: errors.ts  index.ts  types.ts
typescript/tests/: errors.test.ts  schema-conformance.test.ts  types.test.ts
